<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.linktag.base.base_header.BaseHeader
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/jdm_detail_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_detail_root_margin_start"
            android:layout_marginTop="@dimen/activity_detail_root_margin_top"
            android:layout_marginEnd="@dimen/activity_detail_root_margin_end"
            android:layout_marginBottom="@dimen/activity_detail_root_margin_bottom"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_name"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@id/ed_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/detail_name_hint"
                        android:singleLine="true"
                        android:textSize="@dimen/text_normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:background="@drawable/alarm_state_on" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/detail_alarm"
                            android:textSize="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:background="@android:drawable/ic_lock_idle_alarm" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/detail_time"
                            android:textSize="10dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <Button
                android:text="지정한 시간에 노티피케이션 발생시키기"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/bt_alarm" />

            <Button
                android:id="@+id/bt_goScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="스캔하러가기"/>


            <Button
                android:id="@+id/bt_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="정지"/>


        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/list_item_Detail_saveBtn"
        android:text="@string/detail_save"
        android:textColor="@color/white" />
</LinearLayout>
