<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#34495E"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:text="접종정보 편집"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="접종기관"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_vamCnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_vam_nodata"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/list_item_layout"
            android:gravity="center_vertical"
            android:text="접종기관 없음"
            android:textAlignment="center"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_vam"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/list_item_layout"
            tools:listitem="@layout/listitem_vam_list2" />


        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="접종정보"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_vadCnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/tv_datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="2020.03.07 06:00"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/ed_vadInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:hint="이솝메디컬 055 232 0111"
                android:singleLine="true"
                android:textSize="@dimen/small_text" />

            <Button
                android:id="@+id/btn_addItem_hw"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/btn_round_indigo_5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/pcm_info_add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_vad_nodata"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/list_item_layout"
            android:gravity="center_vertical"
            android:text="접종정보 없음"
            android:textAlignment="center"
            android:visibility="gone" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_vad"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/list_item_layout"
            tools:listitem="@layout/listitem_vad_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/onNegative"
            android:textColor="#000000"
            android:textSize="16dp" />

        <!--        <View-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:background="#000000" />-->

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/onPositive"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>